--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -27,3 +27,10 @@ javax.sql.DataSource.helidon.dataSource.user=helidonlab
 javax.sql.DataSource.helidon.dataSource.password=TODO
 javax.sql.DataSource.helidon.maximumPoolSize=2
 javax.sql.DataSource.helidon.minimumIdle=1
+
+# src/main/resources/WEB in your source tree
+server.static.classpath.location=/WEB
+# default is index.html
+server.static.classpath.welcome=index.html
+# static content path - default is "/"
+# server.static.classpath.context=/static-cp
